# VSS-Intel

./: ARCHITECTURE.md  README.md
src/vss_bringup/: CMakeLists.txt  package.xml
src/vss_bringup/config/: vss_params.yaml
src/vss_bringup/launch/: sim.launch.py
src/vss_core/: CMakeLists.txt  package.xml
src/vss_core/include/vss_core/: game_context.hpp  go_to_ball_skill.hpp  go_to_position_skill.hpp  kick_skill.hpp  play.hpp  plays.hpp  role.hpp  roles.hpp  rotate_to_angle_skill.hpp  skill.hpp  tactic.hpp  types.hpp  vector_attacker_skill.hpp  vss_core.hpp  wait_ball_kicker_skill.hpp
src/vss_fira_bridge/: CMakeLists.txt  package.xml
src/vss_fira_bridge/include/proto/: command.pb.cc  command.pb.h  common.pb.cc  common.pb.h  packet.pb.cc  packet.pb.h  replacement.pb.cc  replacement.pb.h
src/vss_fira_bridge/src/: fira_bridge_node.cpp
src/vss_msgs/: CMakeLists.txt  package.xml
src/vss_msgs/msg/: BallState.msg  GameState.msg  RobotCommand.msg  RobotCommandArray.msg  RobotState.msg
src/vss_strategy/: CMakeLists.txt  package.xml
src/vss_strategy/src/: strategy_node.cpp
src/vss_vision/: CMakeLists.txt  package.xml
src/vss_vision/src/: ekf_node.cpp
