<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"
?>
<package format="3">
  <name>vss_bringup</name>
  <version>1.0.0</version>
  <description>Launch files e configurações do VSS</description>
  <maintainer email="roboime@ime.eb.br">roboime</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependências dos nós que este launch file sobe -->
  <exec_depend>vss_fira_bridge</exec_depend>
  <exec_depend>vss_vision</exec_depend>
  <exec_depend>vss_strategy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
