<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"
?>
<package format="3">
  <name>vss_vision</name>
  <version>1.0.0</version>
  <description>EKF para rastreio da bola VSS</description>
  <maintainer email="roboime@ime.eb.br">roboime</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <build_depend>vss_msgs</build_depend>
  <exec_depend>vss_msgs</exec_depend>
  <depend>vss_core</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
